--- a/.github/workflows/maven-ci.yml
+++ b/.github/workflows/maven-ci.yml
@@ -76,6 +76,7 @@ jobs:
         with:
           key: cached-build-${{github.sha}}
           path: .
+          fetch-depth: 0
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
